--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/bot.ts",
   "scripts": {
-    "start": "ts-node-dev .",
+    "start": "ts-node .",
     "prod": "ts-node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
